tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_null_source_arguments_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:61
  •
  │
  • invalid type: null, expected a sequence
  │
  │   {"sources":{"kind":"command","program":"custom","arguments":null}}
  │                                                               ╰───
  •
