tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_trailing_json_file.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · config/settings.json:1:4
  •
  │
  • trailing characters
  │
  │   {} false
  │      ╰
  •
