tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_unicode_syntax_error_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:2:28
  •
  │
  • expected value
  │
  │       "diagnostics": {"onSave": λ}
  │                                 ╰
  •
