tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_unknown_diagnostic_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:17
  •
  │
  • unknown field `onOpened`, expected one of `onOpen`, `onSave`, `onChange`
  │
  │   {"diagnostics":{"onOpened":false}}
  │                   ╰─────────
  •
