tests-e2e/tests/package_manager/snapshots/package_manager__cli__config_unknown_setting_inline.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [InvalidConfiguration] · --config:1:2
  •
  │
  • unknown field `unknown`, expected `sources` or `diagnostics`
  │
  │   {"unknown":true}
  │    ╰────────
  •
